# claude-code-notify

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  release.ps1  release.sh
.github/workflows/: ci.yml  release.yml
docs/: API.md
openspec/changes/archive/2026-01-03-fix-integration-config/: tasks.md
openspec/changes/archive/2026-01-03-fix-integration-config/specs/integration/: spec.md
openspec/changes/archive/2026-01-03-implement-windows-toast-notifications/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-03-implement-windows-toast-notifications/specs/notification/: spec.md
openspec/changes/archive/2026-01-04-fix-claude-code-hooks/: proposal.md  tasks.md
openspec/changes/archive/2026-01-04-fix-claude-code-hooks/specs/integration/: spec.md
openspec/changes/archive/2026-01-04-implement-ccn-core/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-04-implement-ccn-core/specs/cli-core/: spec.md
openspec/changes/archive/2026-01-04-implement-ccn-core/specs/config-wizard/: spec.md
openspec/changes/fix-integration-config/: design.md  proposal.md  tasks.md
openspec/changes/fix-integration-config/specs/integration/: spec.md
openspec/changes/implement-ccn-core/: tasks.md
openspec/changes/implement-ccn-core/specs/auto-integration/: spec.md
openspec/changes/implement-ccn-core/specs/notification-display/: spec.md
openspec/changes/implement-ccn-core/specs/smart-policy/: spec.md
openspec/specs/auto-integration/: spec.md
openspec/specs/cli-core/: spec.md
openspec/specs/config-wizard/: spec.md
openspec/specs/integration/: spec.md
openspec/specs/notification/: spec.md
openspec/specs/notification-display/: spec.md
openspec/specs/smart-policy/: spec.md
scoop/: README.md  ccn.json
src/: aggregator.rs  cli.rs  config.rs  integration.rs  lib.rs  main.rs  notification.rs  path_manager.rs  policy.rs  sound.rs  wizard.rs
