[package]
name = "ccn"
version = "1.0.13"
edition = "2024"
description = "Claude Code Notify - 优雅的任务通知工具"
authors = ["CCN Team"]
license = "MIT"
repository = "https://github.com/yangshare/claude-code-notify"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = "0.4"

# 音频播放
rodio = { version = "0.19", optional = true }

# Windows 通知 (目标特定)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Notifications",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_System_Registry",
] }
winreg = "0.52"

# macOS 通知 (目标特定)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

# TUI 框架 (可选，仅在需要时)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
tui = ["ratatui", "crossterm"]
sound = ["rodio"]

[lib]
name = "ccn"
path = "src/lib.rs"

[[bin]]
name = "ccn"
path = "src/main.rs"
